# spider-solver

./: .gitignore  Makefile  manual.py  pyproject.toml  simulate.py
src/spider_solver/: board.py  card.py  exceptions.py  flat_board.py  game.py  stack.py  types.py
tests/: conftest.py  test_board.py  test_card.py  test_solution_trie.py  test_stack.py
